forgot to add an overflow hopefully this fixes it

--- a/crux-conqueror/src/main/resources/static/css/account.css
+++ b/crux-conqueror/src/main/resources/static/css/account.css
@@ -9,6 +9,7 @@ body {
     width: min(95%, 1100px);
     margin: 0 auto;
     padding: 30px 20px 50px;
+    overflow-x: hidden;
 }
 
 .account-header {
